--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,8 +3,9 @@
   --green-dark-2: #025a51;
   --green-hover: #26c0a3;
   --green-light: #cff2f2;
-  --green-light-2: #d0f2f2;
+  --green-light-2: hsl(190, 50%, 95%);
   --white-light: #f2f2f2;
+  --gray: #666666;
 
   font-size: 62.5%;
 }
@@ -13,7 +14,7 @@ body {
   width: 100vw;
   margin-inline: auto;
 
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Cursine', monospace;
   font-size: 1.6rem;
   color: var(--white-light);
 
@@ -23,15 +24,13 @@ body {
 
 }
 
-body img {
+nav {
+  text-align: center;
   padding-block: 4rem;
 }
-
 .wrapper {
-  display: flex;
-  width: 37.5rem;
+  width: 32rem;
   height: 100vh;
-  padding-top: 1.6rem;
   margin-inline: auto;
 }
 
@@ -41,25 +40,54 @@ body img {
 }
 
 .main {
-  width: 100vw;
-  height: 100vh;
   background-color: white;
-
-  border-radius: 2rem;
+  border-radius: 2rem 2rem 0 0;
   
   font-size: 1.4rem;
   font-weight: bold;
-  color: var(--green-dark-2);
+  color: var(--gray);
 
   padding-block: 3rem;
   padding-inline: 3rem;
+
 }
 
 .bill-form {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
+
+svg{
+  position: absolute;
+  margin: 1rem;
+  
+}
+
+input {
+  width: 26rem;
+  padding: 0.5rem;
+  height: 3.5rem;
+
+  background-color: var(--green-light-2);
+  border: none;
+  border-radius: .5rem;
+
+  text-align: right;
+
+  font-family: 'Cursine', monospace;
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--green-dark-2);
+
+}
+
+textarea:focus, input:focus{
+  outline: none;
+  border: 2px solid var(--green-hover);
+}
+
 
 .tip {
   display: flex;
@@ -69,12 +97,35 @@ body img {
   padding-block: 2rem;
 }
 
+.tip .content ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+
+  text-align: center;
+}
+
+.tip .content button {
+  width: 12rem;
+  height: 4rem;
+  
+  font-family: 'Cursine', monospace;
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--white-light);
+  
+  background-color: #014141;
+  border: none;
+  border-radius: .5rem;
+
+}
+
 .people {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
 }
 
 .output-form {
@@ -82,7 +133,7 @@ body img {
   color: var(--white-light);
 
   border-radius: 1rem;
-  padding: 3rem 2rem;
+  padding: 3rem 3rem;
 }
 
 .output-form h2 {
@@ -102,7 +153,6 @@ body img {
   text-align: right;
 }
 
-
 .tip-amount,
 .total {
   display: grid;
@@ -111,3 +161,25 @@ body img {
   padding-bottom: 3rem;
 }
 
+.calc-reset {
+  text-align: center;
+}
+
+#calculate {
+  width: 20rem;
+  height: 3.5rem;
+  text-transform: uppercase;
+
+  background-color: var(--green-hover);
+  border: none;
+  border-radius: .5rem;
+
+  font-family: 'Cursine', monospace;
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: var(--green-dark-2);
+}
+
+#reset {
+  display: none;
+}
