--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,7 +165,6 @@ textarea:focus, input:focus{
 
 
 .calc-reset {
-  
   text-align: center;
 }
 
@@ -209,6 +208,8 @@ textarea:focus, input:focus{
   .main {
     width: 768px;
     margin-inline: auto;
+
+    border-radius: 2rem 2rem;
   }
 
   .main-form {
@@ -226,5 +227,13 @@ textarea:focus, input:focus{
   .tip .content button {
     width: 10rem;
     height: 5rem;
+  }
+
+  .output-form {
+    padding: 5rem 5rem;
+  }
+
+  .calc-reset {
+    padding-top: 10rem;
   }
 }
