Valida fatura e gorjeta ao informar o número de pessoas

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,10 +59,18 @@ nav {
   gap: 1rem;
 }
 
+#bill-validation,
+#tip-validation {
+  font-size: 1rem;
+  color: red;
+}
+
+/*
 .bill-form p {
   font-size: 1rem;
   color: red;
 }
+*/
 
 svg{
   position: absolute;
